<resources>
    <string name="app_name">EmpresaClientes</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="repassword">Retype Password</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>

    <string-array name="array_comunidades">
        <item>Selecciona Comunidad Autonoma</item>
        <item>Andalucía</item>
        <item>Aragón</item>
        <item>Asturias</item>
        <item>Islas Baleares</item>
        <item>Canarias</item>
        <item>Cantabria</item>
        <item>Castilla y León</item>
        <item>Castilla-La Mancha</item>
        <item>Cataluña</item>
        <item>Comunidad Valenciana</item>
        <item>Extremadura</item>
        <item>Galicia</item>
        <item>Madrid</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>País Vasco</item>
        <item>La Rioja</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>
    <string-array name="array_provincias_predeterminadas">
        <item>Selecciona Provincia</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>