<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciodesesion"
    tools:context=".Menus.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="70dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold" />


    <EditText
        android:layout_marginTop="160dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="#212121"
        android:textColorHint="#212121"
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password1"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="#212121"
        android:textColorHint="#212121"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:layout_below="@+id/username1"/>
    <ImageButton
        android:id="@+id/btnShowPassword1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/password1"
        android:layout_alignEnd="@id/password1"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_view"/>

    <Button
        android:id="@+id/buttonsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginTop="50dp"

        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_below="@+id/password1"
        android:backgroundTint="@color/black" />

</RelativeLayout>